# JohnnyEngine2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake
ext/include/: stb_image.h
shd/: colorTriangle.frag  colorTriangle.vert  modelShader.frag  red.frag  red.vert  test.txt  textureShader.frag  textureShader.vert  vertexLine.frag
src/: CMakeLists.txt  main.cpp
src/graphics/: CMakeLists.txt  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderable2D.cpp  Renderable2D.h  Renderer2D.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  SimpleRenderer2D.cpp  SimpleRenderer2D.h  Transform.h  VertLineRenderer.cpp  VertLineRenderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/graphics/buffers/: IndexBuffer.cpp  IndexBuffer.h  UBOData.h  UBOPrimitive.cpp  UBOPrimitive.h  UBOPrimitiveArray.cpp  UBOPrimitiveArray.h  UBOStruct.cpp  UBOStruct.h  UBOStructArray.cpp  UBOStructArray.h  UniformBuffer.cpp  UniformBuffer.h  UniformData.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/graphics/models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/graphics/scenes/: Scene.h  TriangleScene.cpp  Window.h
src/graphics/shaderManager/: Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/graphics/texturing/: Texture.cpp  Texture.h
src/input/: CMakeLists.txt  GLFWInput.cpp  GLFWInput.h  GLFWKeyboard.cpp  GLFWKeyboard.h  Keyboard.cpp  Keyboard.h
src/scenes/: BasicModelScene.cpp  BasicModelScene.h  CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h  Scene.h  TextureTriangleScene.cpp  TextureTriangleScene.h  TriangleScene.cpp  TriangleScene.h  Window.cpp  Window.h
src/util/: CMakeLists.txt  Color.h  DebugGL.h  FileUtils.h  Timer.cpp  Timer.h
