add_library(graphics scenes/Window.cpp scenes/Window.h shaderManager/Shader.cpp shaderManager/Shader.h shaderManager/ShaderProgram.cpp shaderManager/ShaderProgram.h buffers/VertexBuffer.cpp buffers/VertexBuffer.h buffers/VertexArray.cpp buffers/VertexArray.h buffers/IndexBuffer.cpp buffers/IndexBuffer.h VertLineRenderer.cpp VertLineRenderer.h scenes/Scene.h scenes/TriangleScene.cpp scenes/TriangleScene.h texturing/Texture.cpp texturing/Texture.h)
target_link_libraries(graphics ${ext_libraries} util)